# OFDM_transceiver

./: .gitignore  README.md  base_define.h  config.h  matplotlibcpp.h  table_fft.txt
File converter/: file_converter.cpp  file_converter.h
File converter/test/: test.cpp
File_converter/: file_converter.cpp  file_converter.h
File_converter/test/: test.cpp  test_rand_bits.cpp  test_string_bits.cpp
OFDM/: freq_offset.cpp  freq_offset.hpp  ofdm_demod.cpp  ofdm_demod.h  ofdm_mod.cpp  ofdm_mod.h  sequence.cpp  sequence.h
OFDM/fft/: fft.cpp  fft.h
OFDM/test/: demod_fft_conv.cpp  demod_fft_conv.py  demod_fft_conv_time.cpp  makefile  pilots.cpp  test.cpp  test.py  test_cp_find.cpp  test_cp_find.py  test_rs  test_rs.cpp  test_sss.cpp  test_sss_time.cpp  test_v.cpp
QAM/: qam_demod.cpp  qam_demod.h  qam_maps.h  qam_mod.cpp  qam_mod.h
QAM/test/: test.cpp  test_demod.cpp
QAM_Demodulation/: qam_demod.cpp  qam_demod.h
QAM_Demodulation/test/: test.cpp
QAM_Modulation/: modulation.cpp  modulation.h
QAM_Modulation/test/: test  test.cpp
Segmenter/: segmenter.cpp  segmenter.h
Segmenter/test/: test.cpp  test_check_crc.cpp
other/: model_channel.cpp  model_channel.h  plots.cpp  plots.h
python_visual/: conv.py  time_areol_rx_1sec.py  visual_fft_complex.py
src/hdr/: conv.h
src/resurrs/: imag_part.txt  pss_imag.txt  pss_real.txt  real_part.txt  rx_file.txt  rx_file_copy.txt
src/rx/: conv.txt  correlation.cpp  fft.cpp  imag_rx.txt  l  real_rx.txt  run.sh  rx  rx.cpp  rx_backup1.cpp  rx_c  rx_copy.cpp  temp.cpp  test_iio.c
src/settings_sdr/: settinds_sdr.h
src/tx/: run.sh  tx  tx.cpp
test/chat/: CMakeLists.txt  chat.cpp  chat.h  main.cpp  sdr_settings.cpp  test.cpp  view_OFDM_settings.cpp
test/ofdm_corr/: test.cpp  test.py  test2.cpp  test2.py  test3.py
test/rx_files/: out.txt  test.cpp  v_imag.txt  v_real.txt
test/rx_files_lte/: coders.cpp  coders.h  func_for_real_lte.cpp  func_for_real_lte.h  pbch.cpp  pbch.h  rx_ue.txt  test.cpp  test.py  test_coders_rm.cpp
test/seg_qam/: makefile  test_seg_qam.cpp
test/test_channel/: CMakeLists.txt  dem_sig.txt  model_channel.cpp  out.txt  qpsk.txt  signal.txt  test.cpp  test.py  test2.py
test/test_channel/test_file_out/: .gitignore
